Fix stacking issue with menu icon being rendered behind the videos sometimes.

--- a/sass/partials/design/_design.scss
+++ b/sass/partials/design/_design.scss
@@ -60,7 +60,7 @@ iframe {
   overflow: hidden;
   position: absolute;
   top: 0;
-  z-index: 5;
+  // z-index: 5;
   @extend .clearfix;
 
   #woodceiling-inner {
